Make DevModeTest runnable on Quarkus Platform